kustomize/common/oidc-authservice/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  serviceName: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice 
    spec:
      containers:
      - name: authservice
        image: k8scc01covidacr.azurecr.io/oidc-authservice:latest
        imagePullPolicy: Always
        ports:
        - name: http-api
          containerPort: 8080
        volumeMounts:
          - name: data
            mountPath: /var/lib/authservice  
        readinessProbe:
            httpGet:
              path: /
              port: 8081
      securityContext:
        fsGroup: 111
      imagePullSecrets: 
        - name: k8scc01covidacr-registry-connection
      # this secret must exist in our deployment.
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: authservice-pvc
